--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,8 @@ sqlparse==0.2.2
 Tempita==0.5.2
 Werkzeug==0.11.11
 WTForms==2.1
+python-slugify==1.2.1
+Flask-Admin==1.4.2
+flask-paginate==0.4.5
+MySQL-python==1.2.5
+
